[project]
name = "tlmdb-editor"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "flap1", email = "sho1seto@gmail.com" }]
dependencies = ["streamlit>=1.26.0", "pandas>=2.0.3", "toml>=0.10.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
"editor" = { cmd = "streamlit run tlmdb-editor.py" }
