[project]
name = "tlmdb-editor"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "flap1", email = "sho1seto@gmail.com" }]
dependencies = ["streamlit>=1.23.1", "toml>=0.10.2", "pandas>=1.1.5"]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.3.0",
    "pyproject-flake8>=5.0.4.post1",
    "isort>=5.11.5",
    "mypy>=1.4.1",
    "pandas-stubs>=1.2.0.62",
    "types-toml>=0.10.8.7",
    "flake8-annotations>=2.9.1",
    "pep8-naming>=0.13.3",
    "pytest>=7.4.2",
]


[tool.black]
line-length = 150

[tool.isort]
line_length = 150
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.flake8]
max-line-length = 150
ignore = ["E203", "E501", "W503", "W504"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
tlm = { cmd = "streamlit run src/tlmdb-editor.py" }
cmd = { cmd = "streamlit run src/cmddb-editor.py" }
format = { chain = ["black src", "isort src"] }
lint = { chain = [
    "black --check src",
    "isort -c -v src",
    "pflake8 src",
    "mypy src",
] }
